# ProgettoCG-2023

./: CMakeLists.txt  README.md  main_shadow.cpp
common/: glad.h  mesh.h  model.h  texture.h
objects/boot/: imgui.ini  sh_catWorkBoot.mtl
shaders/: shadowMappingDepth.vs  shadowShader.fs
